--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -377,7 +377,7 @@
           >
             <div
               (click)="followUrl(project.deployed_url.slice(0, -10))"
-              class="relative h-48 xs:h-52 bg-neutral-900"
+              class="relative h-48 xs:h-52 bg-transparent"
             >
               <iframe
                 [src]="project.safeUrl"
